@@ -10,7 +10,9 @@
 ** New Features
 - Query trending support spoken languages filter
 - CLI support args parse, both sync and trendings are supported now
-
+- Support gist
+  - Query
+  - Delete/Unstar
 ** Internal Improvements
 - Trending API reuse =curl= instance
 
